// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`process default 1`] = `
[
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": "701644031206",
      "__primary_category": {
        "0": "Womens",
        "1": "Womens > Clothing",
        "2": "Womens > Clothing > Bottoms",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "color": "Hot Pink Combo",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "small",
        },
      ],
      "in_stock": true,
      "long_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "name": "Floral Dress",
      "objectID": "701644031206M",
      "online": true,
      "pageDescription": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "pageKeywords": null,
      "pageTitle": "Floral Dress",
      "price": {
        "EUR": 92.88,
        "USD": 129,
      },
      "refinementColor": "Pink",
      "refinementSize": "4",
      "searchable": true,
      "short_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "size": "4",
      "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/default/Product-Show?pid=701644031206M",
      "variant": true,
    },
    "indexName": "test_index___products__default",
  },
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": "701644031206",
      "__primary_category": {
        "0": "Femmes",
        "1": "Femmes > Vêtements",
        "2": "Femmes > Vêtements > Bas",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "color": "Combo rose vif",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
          ],
          "view_type": "small",
        },
      ],
      "in_stock": true,
      "long_description": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "name": "Robe florale",
      "objectID": "701644031206M",
      "online": true,
      "pageDescription": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "pageKeywords": null,
      "pageTitle": "Robe florale",
      "price": {
        "EUR": 92.88,
        "USD": 129,
      },
      "refinementColor": "Rose",
      "refinementSize": "4",
      "searchable": true,
      "short_description": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "size": "4",
      "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/fr/Product-Show?pid=701644031206M",
      "variant": true,
    },
    "indexName": "test_index___products__fr",
  },
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": "701644031206",
      "__primary_category": {
        "0": "Womens",
        "1": "Womens > Clothing",
        "2": "Womens > Clothing > Bottoms",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "color": "Hot Pink Combo",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "small",
        },
      ],
      "in_stock": true,
      "long_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "name": "Floral Dress",
      "objectID": "701644031206M",
      "online": true,
      "pageDescription": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "pageKeywords": null,
      "pageTitle": "Floral Dress",
      "price": {
        "EUR": 92.88,
        "USD": 129,
      },
      "refinementColor": "Pink",
      "refinementSize": "4",
      "searchable": true,
      "short_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "size": "4",
      "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/en/Product-Show?pid=701644031206M",
      "variant": true,
    },
    "indexName": "test_index___products__en",
  },
]
`;

exports[`process master-level indexing 1`] = `
[
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": null,
      "__primary_category": {
        "0": "Womens",
        "1": "Womens > Clothing",
        "2": "Womens > Clothing > Bottoms",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "colorVariations": [
        {
          "color": "Hot Pink Combo",
          "image_groups": [
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, large",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, large",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
              ],
              "view_type": "large",
            },
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, small",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, small",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
              ],
              "view_type": "small",
            },
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, swatch",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw506aa734/images/swatch/PG.10237222.JJB52A0.CP.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
              ],
              "view_type": "swatch",
            },
          ],
          "variationURL": "/on/demandware.store/Sites-Algolia_SFRA-Site/default/Product-Show?pid=25592581M&dwvar_25592581M_color=JJB52A0",
        },
      ],
      "defaultVariantID": "701644031206M",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "small",
        },
      ],
      "long_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "name": "Floral Dress",
      "objectID": "25592581M",
      "online": true,
      "pageDescription": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "pageKeywords": null,
      "pageTitle": "Floral Dress",
      "searchable": true,
      "short_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "variant": false,
      "variants": [
        algoliaLocalizedProduct {
          "color": "Hot Pink Combo",
          "in_stock": true,
          "price": {
            "EUR": 92.88,
            "USD": 129,
          },
          "refinementColor": "Pink",
          "refinementSize": "4",
          "size": "4",
          "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/default/Product-Show?pid=701644031206M",
          "variantID": "701644031206M",
        },
      ],
    },
    "indexName": "test_index___products__default",
  },
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": null,
      "__primary_category": {
        "0": "Femmes",
        "1": "Femmes > Vêtements",
        "2": "Femmes > Vêtements > Bas",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "colorVariations": [
        {
          "color": "Combo rose vif",
          "image_groups": [
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Robe florale, Combo rose vif, large",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
                  "title": "Robe florale, Combo rose vif",
                },
                {
                  "_type": "image",
                  "alt": "Robe florale, Combo rose vif, large",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
                  "title": "Robe florale, Combo rose vif",
                },
              ],
              "view_type": "large",
            },
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Robe florale, Combo rose vif, small",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
                  "title": "Robe florale, Combo rose vif",
                },
                {
                  "_type": "image",
                  "alt": "Robe florale, Combo rose vif, small",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
                  "title": "Robe florale, Combo rose vif",
                },
              ],
              "view_type": "small",
            },
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Robe fleurie, Mix rose vif, swatch",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw506aa734/images/swatch/PG.10237222.JJB52A0.CP.jpg",
                  "title": "Robe fleurie, Mix rose vif",
                },
              ],
              "view_type": "swatch",
            },
          ],
          "variationURL": "/on/demandware.store/Sites-Algolia_SFRA-Site/fr/Product-Show?pid=25592581M&dwvar_25592581M_color=JJB52A0",
        },
      ],
      "defaultVariantID": "701644031206M",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
          ],
          "view_type": "small",
        },
      ],
      "long_description": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "name": "Robe florale",
      "objectID": "25592581M",
      "online": true,
      "pageDescription": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "pageKeywords": null,
      "pageTitle": "Robe florale",
      "searchable": true,
      "short_description": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "variant": false,
      "variants": [
        algoliaLocalizedProduct {
          "color": "Combo rose vif",
          "in_stock": true,
          "price": {
            "EUR": 92.88,
            "USD": 129,
          },
          "refinementColor": "Rose",
          "refinementSize": "4",
          "size": "4",
          "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/fr/Product-Show?pid=701644031206M",
          "variantID": "701644031206M",
        },
      ],
    },
    "indexName": "test_index___products__fr",
  },
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": null,
      "__primary_category": {
        "0": "Womens",
        "1": "Womens > Clothing",
        "2": "Womens > Clothing > Bottoms",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "colorVariations": [
        {
          "color": "Hot Pink Combo",
          "image_groups": [
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, large",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, large",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
              ],
              "view_type": "large",
            },
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, small",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, small",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
              ],
              "view_type": "small",
            },
            {
              "_type": "image_group",
              "images": [
                {
                  "_type": "image",
                  "alt": "Floral Dress, Hot Pink Combo, swatch",
                  "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw506aa734/images/swatch/PG.10237222.JJB52A0.CP.jpg",
                  "title": "Floral Dress, Hot Pink Combo",
                },
              ],
              "view_type": "swatch",
            },
          ],
          "variationURL": "/on/demandware.store/Sites-Algolia_SFRA-Site/en/Product-Show?pid=25592581M&dwvar_25592581M_color=JJB52A0",
        },
      ],
      "defaultVariantID": "701644031206M",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "small",
        },
      ],
      "long_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "name": "Floral Dress",
      "objectID": "25592581M",
      "online": true,
      "pageDescription": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "pageKeywords": null,
      "pageTitle": "Floral Dress",
      "searchable": true,
      "short_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "variant": false,
      "variants": [
        algoliaLocalizedProduct {
          "color": "Hot Pink Combo",
          "in_stock": true,
          "price": {
            "EUR": 92.88,
            "USD": 129,
          },
          "refinementColor": "Pink",
          "refinementSize": "4",
          "size": "4",
          "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/en/Product-Show?pid=701644031206M",
          "variantID": "701644031206M",
        },
      ],
    },
    "indexName": "test_index___products__en",
  },
]
`;

exports[`process variant-level indexing with IndexOutOfStock=false and product is out of stock 1`] = `
[
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": "701644031206",
      "__primary_category": {
        "0": "Womens",
        "1": "Womens > Clothing",
        "2": "Womens > Clothing > Bottoms",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "color": "Hot Pink Combo",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "small",
        },
      ],
      "in_stock": true,
      "long_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "name": "Floral Dress",
      "objectID": "701644031206M",
      "online": true,
      "pageDescription": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "pageKeywords": null,
      "pageTitle": "Floral Dress",
      "price": {
        "EUR": 92.88,
        "USD": 129,
      },
      "refinementColor": "Pink",
      "refinementSize": "4",
      "searchable": true,
      "short_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "size": "4",
      "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/default/Product-Show?pid=701644031206M",
      "variant": true,
    },
    "indexName": "test_index___products__default",
  },
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": "701644031206",
      "__primary_category": {
        "0": "Femmes",
        "1": "Femmes > Vêtements",
        "2": "Femmes > Vêtements > Bas",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "color": "Combo rose vif",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
            {
              "_type": "image",
              "alt": "Robe florale, Combo rose vif, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Robe florale, Combo rose vif",
            },
          ],
          "view_type": "small",
        },
      ],
      "in_stock": true,
      "long_description": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "name": "Robe florale",
      "objectID": "701644031206M",
      "online": true,
      "pageDescription": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "pageKeywords": null,
      "pageTitle": "Robe florale",
      "price": {
        "EUR": 92.88,
        "USD": 129,
      },
      "refinementColor": "Rose",
      "refinementSize": "4",
      "searchable": true,
      "short_description": "Sentez la brise chaude dans cette robe portefeuille à imprimé floral polyvalent. Complétez ce look avec une superbe paire de sandales à lanières pour une soirée en ville.",
      "size": "4",
      "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/fr/Product-Show?pid=701644031206M",
      "variant": true,
    },
    "indexName": "test_index___products__fr",
  },
  AlgoliaOperation {
    "action": "addObject",
    "body": {
      "UPC": "701644031206",
      "__primary_category": {
        "0": "Womens",
        "1": "Womens > Clothing",
        "2": "Womens > Clothing > Bottoms",
      },
      "brand": null,
      "categoryPageId": [
        "newarrivals",
        "newarrivals-womens",
        "womens",
        "womens-clothing",
        "womens-clothing-bottoms",
      ],
      "color": "Hot Pink Combo",
      "image_groups": [
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwcc434d54/images/large/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, large",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw58a034a4/images/large/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "large",
        },
        {
          "_type": "image_group",
          "images": [
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw4e4ce4f6/images/small/PG.10237222.JJB52A0.PZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
            {
              "_type": "image",
              "alt": "Floral Dress, Hot Pink Combo, small",
              "dis_base_link": "https://zzrk-018.sandbox.us01.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dw2612fb5e/images/small/PG.10237222.JJB52A0.BZ.jpg",
              "title": "Floral Dress, Hot Pink Combo",
            },
          ],
          "view_type": "small",
        },
      ],
      "in_stock": true,
      "long_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "name": "Floral Dress",
      "objectID": "701644031206M",
      "online": true,
      "pageDescription": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "pageKeywords": null,
      "pageTitle": "Floral Dress",
      "price": {
        "EUR": 92.88,
        "USD": 129,
      },
      "refinementColor": "Pink",
      "refinementSize": "4",
      "searchable": true,
      "short_description": "Feel the warm breeze in this versatile printed floral wrap dress. Polish off this look with a great pair of strappy sandals for a night on the town.",
      "size": "4",
      "url": "/on/demandware.store/Sites-Algolia_SFRA-Site/en/Product-Show?pid=701644031206M",
      "variant": true,
    },
    "indexName": "test_index___products__en",
  },
]
`;
